--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     />
     <!-- <link rel="stylesheet" href="./css/styleskopia.css" /> -->
     <link rel="stylesheet" href="./css/main.min.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
   </head>
 
@@ -28,37 +29,43 @@
       <div class="container">
         <nav class="navigation">
           <a class="navigation__logo link" href="index.html"
-            >Web<span class="navigation__logo--dark">Studio</span></a
-          >
+            >Web<span class="navigation__logo--dark">Studio</span></a>
           <ul class="navigation__list list">
             <li class="navigation__item">
-              <a class="navigation__link link menu_index" href="index.html"
+              <a class="navigation__link link menu_index" href="./index.html"
                 >Agencja8</a
               >
             </li>
             <li class="navigation__item">
-              <a class="navigation__link link" href="portfolio.html"
+              <a class="navigation__link link" href="./portfolio.html"
                 >Portfolio8</a
               >
             </li>
             <li class="navigation__item">
-              <a class="navigation__link link" href="#">Kontakt</a>
+              <a class="navigation__link link" href="./index.html">Kontakt</a>
             </li>
           </ul>
         </nav>
+        
+        <div class="header__contact">
         <a class="header__mail link" href="mailto:info@devstudio.com"
-          ><svg class="header__icon" width="20" height="16">
-            <use href="./images/icons.svg#icon-envelope"></use></svg>info@devstudio.com</a
-        >
+          ><svg class="header__icon" width="14" height="10">
+            <use href="./images/icons.svg#icon-envelope"></use></svg>info@devstudio.com</a>
         <a class="header__tel link" href="tel:+48111111111"
-          ><svg class="header__icon" width="20" height="16">
-            <use href="./images/icons.svg#icon-telephone"></use></svg>+48 111 111 111</a
-        >
+          ><svg class="header__icon" width="10" height="14">
+            <use href="./images/icons.svg#icon-telephone"></use></svg>+48 111 111 111</a>
+        </div>
+
+        <div class="menu__modal">
+          <svg class="menu__svg" width="40" height="40">
+            <use href="./images/icons.svg#icon-menu_40px"></use>
+          </svg>
+        </div>
       </div>
     </header>
     <main>
       <!---HERO-->
-      <section class="hero">
+      <!-- <section class="hero">
         <div class="container">
           <h1 class="hero__header">
             EFEKTYWNE ROZWIĄZANIA <br />DLA WASZEGO BIZNESU
@@ -67,10 +74,10 @@
             Zamów usługę
           </button>
         </div>
-      </section>
+      </section> -->
 
       <!--LOREM-->
-      <section class="lorem section">
+      <!-- <section class="lorem section">
         <div class="container">
           <ul class="lorem__list list">
             <li class="lorem__item">
@@ -131,10 +138,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!--GALLERY-->
-      <section class="gallery section">
+      <!-- <section class="gallery section">
         <div class="container">
           <h2 class="section-header">Czym się zajmujemy</h2>
           <ul class="gallery__list list">
@@ -164,11 +171,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!--END GALLERY-->
 
       <!--TEAM-->
-      <section class="team section">
+      <!-- <section class="team section">
         <div class="container">
           <h2 class="section-header">Nasz zespół</h2>
           <ul class="team__list list">
@@ -346,11 +353,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!--END TEAM-->
 
       <!--CLIENTS-->
-      <section class="clients section">
+      <!-- <section class="clients section">
         <div class="container">
           <h2 class="section-header">Nasi klienci</h2>
           <ul class="clients-list list">
@@ -398,10 +405,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
 
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container">
         <div class="footer__left-side">
           <a class="navigation__logo link" href="index.html"
@@ -480,7 +487,7 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <!--przycisk zamknięcia jako button-->
     <!-- <div class="backdrop is-hidden" data-modal>
