--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
     />
     <!-- <link rel="stylesheet" href="./css/styleskopia.css" /> -->
     <link rel="stylesheet" href="./css/main.min.css" />
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
   </head>
 
