--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
         
         <div class="header__contact">
         <a class="header__mail link" href="mailto:info@devstudio.com"
-          ><svg class="header__icon" width="14" height="10">
+          ><svg class="header__icon">
             <use href="./images/icons.svg#icon-envelope"></use></svg>info@devstudio.com</a>
         <a class="header__tel link" href="tel:+48111111111"
-          ><svg class="header__icon" width="10" height="14">
+          ><svg class="header__icon">
             <use href="./images/icons.svg#icon-telephone"></use></svg>+48 111 111 111</a>
         </div>
 
