--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
 
 
 
-    <!--przycisk zamknięcia jako button-->
+    <!--menu w oknie modalnym-->
     <div class="backdrop is-hidden" data-modal-menu>
       <div class="modal-menu">
         <div class="modal-menu__close-btn-svg" data-modal-menu-close>
@@ -509,36 +509,43 @@
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </div>
-        <p>dfgdfgdfg</p>
-        <p>fghfghfghfghfgh</p>
-        <nav class="navigation">
-          <a class="navigation__logo link" href="index.html"
-            >Web<span class="navigation__logo--dark">Studio</span></a>
-          <ul class="navigation__list list">
-            <li class="navigation__item">
-              <a class="navigation__link link menu_index" href="./index.html"
-                >Agencja8</a
+        <nav class="modal-menu-navigation">
+          <ul class="modal-menu-navigation__list list">
+            <li class="modal-menu-navigation__item">
+              <a class="modal-menu-navigation__link link" href="./index.html"
+                >Agencja88</a
               >
             </li>
-            <li class="navigation__item">
-              <a class="navigation__link link" href="./portfolio.html"
-                >Portfolio8</a
+            <li class="modal-menu-navigation__item">
+              <a class="modal-menu-navigation__link link" href="./portfolio.html"
+                >Portfolio88</a
               >
             </li>
-            <li class="navigation__item">
-              <a class="navigation__link link" href="./index.html">Kontakt</a>
+            <li class="modal-menu-navigation__item">
+              <a class="modal-menu-navigation__link link" href="./index.html">Kontakt</a>
             </li>
           </ul>
         </nav>
         
-        <div class="header__contact">
-        <a class="header__mail link" href="mailto:info@devstudio.com"
-          ><svg class="header__icon">
-            <use href="./images/icons.svg#icon-envelope"></use></svg>info@devstudio.com</a>
-        <a class="header__tel link" href="tel:+48111111111"
-          ><svg class="header__icon">
-            <use href="./images/icons.svg#icon-telephone"></use></svg>+48 111 111 111</a>
+        <div class="modal-menu-header__contact">
+        <a class="modal-menu-header__tel link" href="tel:+48111111111">+48 111 111 111</a>
+        <a class="modal-menu-header__mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </div>
+
+        <ul class="modal-menu-social-list__list list">
+            <li class="modal-menu-social-list__item">
+              <a class="modal-menu-social-list__link link" href="#">Instagram</a>
+            </li>
+            <li class="modal-menu-social-list__item">
+              <a class="modal-menu-social-list__link link" href="#">Instagram</a>
+            </li>
+            <li class="modal-menu-social-list__item">
+              <a class="modal-menu-social-list__link link" href="#">Instagram</a>
+            </li>
+            <li class="modal-menu-social-list__item">
+              <a class="modal-menu-social-list__link link" href="#">Instagram</a>
+            </li>
+          </ul>
       </div>
     </div>
 
