--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <use href="./images/icons.svg#icon-telephone"></use></svg>+48 111 111 111</a>
         </div>
 
-        <div class="menu__modal">
+        <div class="menu__modal" data-modal-menu-open>
           <svg class="menu__svg" width="40" height="40">
             <use href="./images/icons.svg#icon-menu_40px"></use>
           </svg>
@@ -71,7 +71,7 @@
             EFEKTYWNE ROZWIĄZANIA <br />DLA WASZEGO BIZNESU
           </h1>
           <!-- <button class="hero__modal-btn" type="button" data-modal-open> -->
-            <button class="hero__modal-btn" type="button" data-modal-menu-open></button>
+            <button class="hero__modal-btn" type="button" data-modal-open></button>
             Zamów usługę
           </button>
         </div>
@@ -512,13 +512,13 @@
         <nav class="modal-menu-navigation">
           <ul class="modal-menu-navigation__list list">
             <li class="modal-menu-navigation__item">
-              <a class="modal-menu-navigation__link link" href="./index.html"
-                >Agencja88</a
+              <a class="modal-menu-navigation__link modal-menu_index link" href="./index.html"
+                >Agencja</a
               >
             </li>
             <li class="modal-menu-navigation__item">
-              <a class="modal-menu-navigation__link link" href="./portfolio.html"
-                >Portfolio88</a
+              <a class="modal-menu-navigation__link modal-menu-index link" href="./portfolio.html"
+                >Portfolio</a
               >
             </li>
             <li class="modal-menu-navigation__item">
@@ -537,13 +537,13 @@
               <a class="modal-menu-social-list__link link" href="#">Instagram</a>
             </li>
             <li class="modal-menu-social-list__item">
-              <a class="modal-menu-social-list__link link" href="#">Instagram</a>
+              <a class="modal-menu-social-list__link link" href="#">Twitter</a>
             </li>
             <li class="modal-menu-social-list__item">
-              <a class="modal-menu-social-list__link link" href="#">Instagram</a>
+              <a class="modal-menu-social-list__link link" href="#">Facebook</a>
             </li>
             <li class="modal-menu-social-list__item">
-              <a class="modal-menu-social-list__link link" href="#">Instagram</a>
+              <a class="modal-menu-social-list__link link" href="#">LinkedIn</a>
             </li>
           </ul>
       </div>
