--- a/index.html
+++ b/index.html
@@ -4,23 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <!-- <link rel="stylesheet" href="./css/styleskopia.css" /> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" /> 
     <link rel="stylesheet" href="./css/main.min.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet"/>
     <title>WebStudio</title>
   </head>
 
@@ -70,15 +58,14 @@
           <h1 class="hero__header">
             EFEKTYWNE ROZWIĄZANIA <br />DLA WASZEGO BIZNESU
           </h1>
-          <!-- <button class="hero__modal-btn" type="button" data-modal-open> -->
-            <button class="hero__modal-btn" type="button" data-modal-open></button>
+            <button class="hero__modal-btn" type="button" data-modal-open>
             Zamów usługę
           </button>
         </div>
       </section>
 
       <!--LOREM-->
-      <!-- <section class="lorem section">
+      <section class="lorem section">
         <div class="container">
           <ul class="lorem__list list">
             <li class="lorem__item">
@@ -139,7 +126,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!--GALLERY-->
       <!-- <section class="gallery section">
@@ -176,7 +163,7 @@
       <!--END GALLERY-->
 
       <!--TEAM-->
-      <!-- <section class="team section">
+      <section class="team section">
         <div class="container">
           <h2 class="section-header">Nasz zespół</h2>
           <ul class="team__list list">
@@ -354,11 +341,11 @@
             </li>
           </ul>
         </div>
-      </section> -->
-      <!--END TEAM-->
+      </section> 
+      <!--END TEAM
 
       <!--CLIENTS-->
-      <!-- <section class="clients section">
+      <section class="clients section">
         <div class="container">
           <h2 class="section-header">Nasi klienci</h2>
           <ul class="clients-list list">
@@ -409,7 +396,7 @@
       </section> -->
     </main>
 
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container">
         <div class="footer__left-side">
           <a class="navigation__logo link" href="index.html"
@@ -488,7 +475,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <!-- <div class="modal_menu">
       <div class="modal__close-btn-svg" data-modal-close>
