--- a/index.html
+++ b/index.html
@@ -181,18 +181,7 @@
           <h2 class="section-header">Nasz zespół</h2>
           <ul class="team__list list">
             <li class="team-card">
-              <picture">
-                <img class="team-card__foto" src="./images/team/team-2-tablet.jpg" alt="team-1">
-                <source srcset="./images/team/team-1-desktop.jpg" media="(min-width: 1200px)">    
-                <source srcset="./images/team/team-1-tablet.jpg" media="(min-width: 768px)">                    
-                <!-- <source media="(min-width: 1200px)"
-                        srcset="./images/team/team-1-desktop.jpg 1x,
-                                ./images/team/team-1-desktop@2x.jpg 2x">    
-                <source media="(min-width: 768px)"
-                        srcset="./images/team/team-1-tablet.jpg 1x,
-                                ./images/team/team-1-tablet@2x.jpg 2x">                     -->
-
-              </picture>
+              <img src="./images/team/team-1-mobile.jpg" srcset="./images/team/team-1-mobile.jpg 1x, ./images/team/team-1-mobile@2x.jpg 2x" >
               <div class="team-card__wrapper">
                 <h3 class="team-card__name">John Doe</h3>
                 <p class="team-card__job-title">Product Designer</p>
@@ -445,7 +434,7 @@
           </ul>
         </div>
 
-        <div class="footer__center_side">
+        <div class="footer__center-side">
           <p class="footer__title">dołącz do nas</p>
           <ul class="footer-social-list list">
             <li class="footer-social-list__item link">
@@ -659,6 +648,6 @@
     </div>
 
     <script src="./js/modal.js"></script>
-    <script src="./js/modal-menu.js"></script>
+    <script src="./js/mobil-menu.js"></script>
   </body>
 </html>
