--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
 
     <main>
       <!--SECOND-->
-      <div class="buttons-menu">
+      <!-- <div class="buttons-menu">
         <div class="container">
         <ul class="buttons-menu__list list">
           <li class="buttons-menu__but">
@@ -78,11 +78,11 @@
           </li>
         </ul>
         </div>
-      </div>
+      </div> -->
       <!-- END SECOND-->
 
       <!-- PORTFOLIO-->
-      <section class="portfolio">
+      <!-- <section class="portfolio">
         <div class="container">
           <ul class="portfolio__list list">
             <li class="portfolio-card">
@@ -91,18 +91,7 @@
                   <img class="portfolio-card__image"
                     alt="portfolio-1"
                     src="./images/portfolio/portfolio-4-mobile.jpg"
-                    srcset="
-                    ./images/portfolio/portfolio-3-desktop.jpg 1x,
-                    ./images/portfolio/portfolio-3-desktop@2x.jpg 2x"
-                    media="(min-width: 1200px)"     
-                    srcset="
-                    ./images/portfolio/portfolio-2-tablet.jpg 1x,
-                    ./images/portfolio/portfolio-2-tablet@2x.jpg 2x"
-                    media="(min-width: 768px)" 
-                    srcset="
-                    ./images/portfolio/portfolio-1-mobile.jpg 1x,
-                    ./images/portfolio/portfolio-1-mobile@2x.jpg 2x"
-                    media="(min-width: 768px)"              
+          
                 />
                   <div class="portfolio-card__overlay">
                     <p>
@@ -334,13 +323,13 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
 
     <footer class="footer">
       <div class="container">
         <div class="footer__left-side">
-          <a class="navigation__logo link" href="./index.html"
+          <a class="navigation-footer__logo link" href="./index.html"
             >Web<span class="navigation__logo--light">Studio</span></a
           >
           <ul class="navigation-footer list">
@@ -364,7 +353,7 @@
           </ul>
         </div>
 
-        <div class="footer__center_side">
+        <div class="footer__center-side">
           <p class="footer__title">dołącz do nas</p>
           <ul class="footer-social-list list">
             <li class="footer-social-list__item link">
@@ -469,7 +458,7 @@
     </div>
   </div>
 
-    <script src="./js/modal-menu.js"></script>
+    <script src="./js/mobil-menu.js"></script>
 
   </body>
 </html>
