--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/main.min.css" />
-    <title>Portfolio</title>
+    <title>8888Portfolio</title>
   </head>
 
   <body>
@@ -58,7 +58,7 @@
 
     <main>
       <!--SECOND-->
-      <!-- <div class="buttons-menu">
+      <div class="buttons-menu">
         <div class="container">
         <ul class="buttons-menu__list list">
           <li class="buttons-menu__but">
@@ -78,22 +78,26 @@
           </li>
         </ul>
         </div>
-      </div> -->
-      <!-- END SECOND-->
+      </div>
+      <!-- END SECOND
 
       <!-- PORTFOLIO-->
-      <!-- <section class="portfolio">
+      <section class="portfolio">
         <div class="container">
           <ul class="portfolio__list list">
             <li class="portfolio-card">
               <article class="portfolio-card__wrapper">
                 <section class="portfolio-card__top-section">
-                  <img class="portfolio-card__image"
-                    alt="portfolio-1"
-                    src="./images/portfolio/portfolio-4-mobile.jpg"
-          
-                />
-                  <div class="portfolio-card__overlay">
+                  <picture>
+                    <source srcset="./images/portfolio/portfolio-1-desktop.jpg 1x, ./images/portfolio/portfolio-1-desktop@2x.jpg 2x"
+                      media="(min-width: 1200px)">
+                    <source srcset="./images/portfolio/portfolio-1-tablet.jpg 1x, ./images/portfolio/portfolio-1-tablet@2x.jpg 2x"
+                      media="(min-width: 768px)">
+                    <source srcset="./images/portfolio/portfolio-1-mobile.jpg 1x, ./images/portfolio/portfolio-1-mobile@2x.jpg 2x"
+                      media="(min-width: 480px)">
+                    <img class="portfolio-card__image" src="./images/portfolio/portfolio-1-mobile.jpg" alt="portfolio-1">
+                  </picture>
+                 <div class="portfolio-card__overlay">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
                       rozpowszechniania koronawirusa. Firmy wykorzystują tę
@@ -111,16 +115,17 @@
             <li class="portfolio-card">
               <article class="portfolio-card__wrapper">
                 <section class="portfolio-card__top-section">
-                  <img class="portfolio-card__image"
-                    alt="portfolio-2"
-                    src="./images/portfolio/portfolio-2-desktop.jpg"
-                    srcset="
-                    ./images/portfolio/portfolio-2-desktop.jpg 1x,
-                    ./images/portfolio/portfolio-2-desktop@2x.jpg 2x"
-                    media="(min-width: 1200px)"                
-                  />                  
+                  <picture>
+                    <source srcset="./images/portfolio/portfolio-2-desktop.jpg 1x, ./images/portfolio/portfolio-2-desktop@2x.jpg 2x"
+                      media="(min-width: 1200px)">
+                    <source srcset="./images/portfolio/portfolio-2-tablet.jpg 1x, ./images/portfolio/portfolio-2-tablet@2x.jpg 2x"
+                      media="(min-width: 768px)">
+                    <source srcset="./images/portfolio/portfolio-2-mobile.jpg 1x, ./images/portfolio/portfolio-2-mobile@2x.jpg 2x"
+                      media="(min-width: 480px)">
+                    <img class="portfolio-card__image" src="./images/portfolio/portfolio-2-mobile.jpg" alt="portfolio-2">
+                  </picture>
                   <div class="portfolio-card__overlay">
-                    <p>
+                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
                       rozpowszechniania koronawirusa. Firmy wykorzystują tę
                       platformę do celów szpiegowskich i ataków na
@@ -139,14 +144,15 @@
             <li class="portfolio-card">
               <article class="portfolio-card__wrapper">
                 <section class="portfolio-card__top-section">
-                  <img class="portfolio-card__image"
-                    alt="portfolio-3"
-                    src="./images/portfolio/portfolio-3-desktop.jpg"
-                    srcset="
-                    ./images/portfolio/portfolio-3-desktop.jpg 1x,
-                    ./images/portfolio/portfolio-3-desktop@2x.jpg 2x"
-                    media="(min-width: 1200px)"                
-                  />
+                  <picture>
+                    <source srcset="./images/portfolio/portfolio-3-desktop.jpg 1x, ./images/portfolio/portfolio-3-desktop@2x.jpg 2x"
+                      media="(min-width: 1200px)">
+                    <source srcset="./images/portfolio/portfolio-3-tablet.jpg 1x, ./images/portfolio/portfolio-3-tablet@2x.jpg 2x"
+                      media="(min-width: 768px)">
+                    <source srcset="./images/portfolio/portfolio-3-mobile.jpg 1x, ./images/portfolio/portfolio-3-mobile@2x.jpg 2x"
+                      media="(min-width: 480px)">
+                    <img class="portfolio-card__image" src="./images/portfolio/portfolio-3-mobile.jpg" alt="portfolio-3">
+                  </picture>
                   <div class="portfolio-card__overlay">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
@@ -165,14 +171,15 @@
             <li class="portfolio-card">
               <article class="portfolio-card__wrapper">
                 <section class="portfolio-card__top-section">
-                  <img class="portfolio-card__image"
-                    alt="portfolio-4"
-                    src="./images/portfolio/portfolio-4-desktop.jpg"
-                    srcset="
-                    ./images/portfolio/portfolio-4-desktop.jpg 1x,
-                    ./images/portfolio/portfolio-4-desktop@2x.jpg 2x"
-                    media="(min-width: 1200px)"                
-                  />
+                  <picture>
+                    <source srcset="./images/portfolio/portfolio-4-desktop.jpg 1x, ./images/portfolio/portfolio-4-desktop@2x.jpg 2x"
+                      media="(min-width: 1200px)">
+                    <source srcset="./images/portfolio/portfolio-4-tablet.jpg 1x, ./images/portfolio/portfolio-4-tablet@2x.jpg 2x"
+                      media="(min-width: 768px)">
+                    <source srcset="./images/portfolio/portfolio-4-mobile.jpg 1x, ./images/portfolio/portfolio-4-mobile@2x.jpg 2x"
+                      media="(min-width: 480px)">
+                    <img class="portfolio-card__image" src="./images/portfolio/portfolio-4-mobile.jpg" alt="portfolio-4">
+                  </picture> 
                   <div class="portfolio-card__overlay">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
@@ -191,14 +198,15 @@
             <li class="portfolio-card">
               <article class="portfolio-card__wrapper">
                 <section class="portfolio-card__top-section">
-                  <img class="portfolio-card__image"
-                    alt="portfolio-1"
-                    src="./images/portfolio/portfolio-5-desktop.jpg"
-                    srcset="
-                    ./images/portfolio/portfolio-5-desktop.jpg 1x,
-                    ./images/portfolio/portfolio-5-desktop@2x.jpg 2x"
-                    media="(min-width: 1200px)"                
-                  />
+                  <picture>
+                    <source srcset="./images/portfolio/portfolio-5-desktop.jpg 1x, ./images/portfolio/portfolio-5-desktop@2x.jpg 2x"
+                      media="(min-width: 1200px)">
+                    <source srcset="./images/portfolio/portfolio-5-tablet.jpg 1x, ./images/portfolio/portfolio-5-tablet@2x.jpg 2x"
+                      media="(min-width: 768px)">
+                    <source srcset="./images/portfolio/portfolio-5-mobile.jpg 1x, ./images/portfolio/portfolio-5-mobile@2x.jpg 2x"
+                      media="(min-width: 480px)">
+                    <img class="portfolio-card__image" src="./images/portfolio/portfolio-5-mobile.jpg" alt="portfolio-5">
+                  </picture>
                   <div class="portfolio-card__overlay">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
@@ -217,14 +225,15 @@
             <li class="portfolio-card">
               <article class="portfolio-card__wrapper">
                 <section class="portfolio-card__top-section">
-                  <img class="portfolio-card__image"
-                    alt="portfolio-6"
-                    src="./images/portfolio/portfolio-6-desktop.jpg"
-                    srcset="
-                    ./images/portfolio/portfolio-6-desktop.jpg 1x,
-                    ./images/portfolio/portfolio-6-desktop@2x.jpg 2x"
-                    media="(min-width: 1200px)"                
-                  />
+                  <picture>
+                    <source srcset="./images/portfolio/portfolio-6-desktop.jpg 1x, ./images/portfolio/portfolio-6-desktop@2x.jpg 2x"
+                      media="(min-width: 1200px)">
+                    <source srcset="./images/portfolio/portfolio-6-tablet.jpg 1x, ./images/portfolio/portfolio-6-tablet@2x.jpg 2x"
+                      media="(min-width: 768px)">
+                    <source srcset="./images/portfolio/portfolio-6-mobile.jpg 1x, ./images/portfolio/portfolio-6-mobile@2x.jpg 2x"
+                      media="(min-width: 480px)">
+                    <img class="portfolio-card__image" src="./images/portfolio/portfolio-6-mobile.jpg" alt="portfolio-6">
+                  </picture>
                   <div class="portfolio-card__overlay">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
@@ -245,14 +254,15 @@
             <li class="portfolio-card">
               <article class="portfolio-card__wrapper">
                 <section class="portfolio-card__top-section">
-                  <img class="portfolio-card__image"
-                    alt="portfolio-7"
-                    src="./images/portfolio/portfolio-7-desktop.jpg"
-                    srcset="
-                    ./images/portfolio/portfolio-7-desktop.jpg 1x,
-                    ./images/portfolio/portfolio-7-desktop@2x.jpg 2x"
-                    media="(min-width: 1200px)"                
-                  /> 
+                  <picture>
+                    <source srcset="./images/portfolio/portfolio-7-desktop.jpg 1x, ./images/portfolio/portfolio-7-desktop@2x.jpg 2x"
+                      media="(min-width: 1200px)">
+                    <source srcset="./images/portfolio/portfolio-7-tablet.jpg 1x, ./images/portfolio/portfolio-7-tablet@2x.jpg 2x"
+                      media="(min-width: 768px)">
+                    <source srcset="./images/portfolio/portfolio-7-mobile.jpg 1x, ./images/portfolio/portfolio-7-mobile@2x.jpg 2x"
+                      media="(min-width: 480px)">
+                    <img class="portfolio-card__image" src="./images/portfolio/portfolio-7-mobile.jpg" alt="portfolio-7">
+                  </picture>
                   <div class="portfolio-card__overlay">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
@@ -271,15 +281,15 @@
             <li class="portfolio-card">
               <article class="portfolio-card__wrapper">
                 <section class="portfolio-card__top-section">
-                  <img
-                  <img class="portfolio-card__image"
-                    alt="portfolio-8"
-                    src="./images/portfolio/portfolio-8-desktop.jpg"
-                    srcset="
-                    ./images/portfolio/portfolio-8-desktop.jpg 1x,
-                    ./images/portfolio/portfolio-8-desktop@2x.jpg 2x"
-                    media="(min-width: 1200px)"                
-                />
+                  <picture>
+                    <source srcset="./images/portfolio/portfolio-8-desktop.jpg 1x, ./images/portfolio/portfolio-8-desktop@2x.jpg 2x"
+                      media="(min-width: 1200px)">
+                    <source srcset="./images/portfolio/portfolio-8-tablet.jpg 1x, ./images/portfolio/portfolio-8-tablet@2x.jpg 2x"
+                      media="(min-width: 768px)">
+                    <source srcset="./images/portfolio/portfolio-8-mobile.jpg 1x, ./images/portfolio/portfolio-8-mobile@2x.jpg 2x"
+                      media="(min-width: 480px)">
+                    <img class="portfolio-card__image" src="./images/portfolio/portfolio-8-mobile.jpg" alt="portfolio-8">
+                  </picture>
                   <div class="portfolio-card__overlay">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
@@ -298,14 +308,15 @@
             <li class="portfolio-card">
               <article class="portfolio-card__wrapper">
                 <section class="portfolio-card__top-section">
-                  <img class="portfolio-card__image"
-                    alt="portfolio-9"
-                    src="./images/portfolio/portfolio-9-desktop.jpg"
-                    srcset="
-                    ./images/portfolio/portfolio-9-desktop.jpg 1x,
-                    ./images/portfolio/portfolio-9-desktop@2x.jpg 2x"
-                    media="(min-width: 1200px)"                
-                  />
+                  <picture>
+                    <source srcset="./images/portfolio/portfolio-9-desktop.jpg 1x, ./images/portfolio/portfolio-9-desktop@2x.jpg 2x"
+                      media="(min-width: 1200px)">
+                    <source srcset="./images/portfolio/portfolio-9-tablet.jpg 1x, ./images/portfolio/portfolio-9-tablet@2x.jpg 2x"
+                      media="(min-width: 768px)">
+                    <source srcset="./images/portfolio/portfolio-9-mobile.jpg 1x, ./images/portfolio/portfolio-9-mobile@2x.jpg 2x"
+                      media="(min-width: 480px)">
+                    <img class="portfolio-card__image" src="./images/portfolio/portfolio-9-mobile.jpg" alt="portfolio-9">
+                  </picture>
                   <div class="portfolio-card__overlay">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
@@ -323,7 +334,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <footer class="footer">
