--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/main.min.css" />
-    <title>WebStudio</title>
+    <title>8888WebStudio</title>
   </head>
 
   <body>
@@ -139,24 +139,22 @@
           <ul class="about__list list">
             <li class="about-card">
               <img class="about-card__photo"
-                  alt="aplikacje komputerowe"
-                  src="./images/about/about-1-desktop.jpg"
-                  srcset="
-                  ./images/about/about-1-desktop.jpg 1x,
-                  ./images/about/about-1-desktop@2x.jpg 2x"
-                  media="(min-width: 1200px)"
-                />
+              alt="rozwiązania graficzne"
+              src="./images/about/about-1-desktop.jpg"
+              srcset="
+              ./images/about/about-1-desktop.jpg 1x,
+              ./images/about/about-1-desktop@2x.jpg 2x"
+            />
               <p class="about-card__description">aplikacje komputerowe</p>
             </li>
             <li class="about-card">
               <img class="about-card__photo"
-                  alt="aplikacje mobilne"
-                  src="./images/about/about-2-desktop.jpg"
-                  srcset="
-                  ./images/about/about-2-desktop.jpg 1x,
-                  ./images/about/about-2-desktop@2x.jpg 2x"
-                  media="(min-width: 1200px)"                  
-                />
+              alt="rozwiązania graficzne"
+              src="./images/about/about-2-desktop.jpg"
+              srcset="
+              ./images/about/about-2-desktop.jpg 1x,
+              ./images/about/about-2-desktop@2x.jpg 2x"
+            />
               <p class="about-card__description">apikacje mobilne</p>
             </li>
             <li class="about-card">
@@ -166,7 +164,6 @@
                   srcset="
                   ./images/about/about-3-desktop.jpg 1x,
                   ./images/about/about-3-desktop@2x.jpg 2x"
-                  media="(min-width: 1200px)"                
                 />
               <p class="about-card__description">rozwiązania graficzne</p>
             </li>
@@ -181,7 +178,15 @@
           <h2 class="section-header">Nasz zespół</h2>
           <ul class="team__list list">
             <li class="team-card">
-              <img src="./images/team/team-1-mobile.jpg" srcset="./images/team/team-1-mobile.jpg 1x, ./images/team/team-1-mobile@2x.jpg 2x" >
+              <picture>
+                <source srcset="./images/team/team-1-desktop.jpg 1x, ./images/team/team-1-desktop@2x.jpg 2x"
+                  media="(min-width: 1200px)">
+                <source srcset="./images/team/team-1-tablet.jpg 1x, ./images/team/team-1-tablet@2x.jpg 2x"
+                  media="(min-width: 768px)">
+                <source srcset="./images/team/team-1-mobile.jpg 1x, ./images/team/team-1-mobile@2x.jpg 2x"
+                  media="(min-width: 480px)">
+                <img class="team-card__foto" src="./images/team/team-1-mobile.jpg" alt="team-1">
+              </picture>
               <div class="team-card__wrapper">
                 <h3 class="team-card__name">John Doe</h3>
                 <p class="team-card__job-title">Product Designer</p>
@@ -218,18 +223,15 @@
               </div>
             </li>
             <li class="team-card">
-              <img class="team-card__foto"
-                  alt="team-2"
-                  src="./images/team/team-2-desktop.jpg"
-                  srcset="
-                  ./images/team/team-1-desktop.jpg 1x,
-                  ./images/team/team-1-desktop@2x.jpg 2x"
-                  media="(min-width: 1200px)"    
-                  srcset="
-                  ./images/team/team-3-desktop.jpg 1x,
-                  ./images/team/team-3-desktop@2x.jpg 2x"
-                  media="(min-width: 768px)"             
-                />
+              <picture>
+                <source srcset="./images/team/team-2-desktop.jpg 1x, ./images/team/team-2-desktop@2x.jpg 2x"
+                  media="(min-width: 1200px)">
+                <source srcset="./images/team/team-2-tablet.jpg 1x, ./images/team/team-2-tablet@2x.jpg 2x"
+                  media="(min-width: 768px)">
+                <source srcset="./images/team/team-2-mobile.jpg 1x, ./images/team/team-2-mobile@2x.jpg 2x"
+                  media="(min-width: 480px)">
+                <img class="team-card__foto" src="./images/team/team-2-mobile.jpg" alt="team-2">
+              </picture>
               <div class="team-card__wrapper">
                 <h3 class="team-card__name">John Doe</h3>
                 <p class="team-card__job-title">Frontend Developer</p>
@@ -266,14 +268,15 @@
               </div>
             </li>
             <li class="team-card">
-              <img class="team-card__foto"
-                alt="team-3"
-                src="./images/team/team-3-desktop.jpg"
-                srcset="
-                  ./images/team/team-3-desktop.jpg 1x,
-                  ./images/team/team-3-desktop@2x.jpg 2x"
-                media="(min-width: 1200px)"                
-              />
+              <picture>
+                <source srcset="./images/team/team-3-desktop.jpg 1x, ./images/team/team-3-desktop@2x.jpg 2x"
+                  media="(min-width: 1200px)">
+                <source srcset="./images/team/team-3-tablet.jpg 1x, ./images/team/team-3-tablet@2x.jpg 2x"
+                  media="(min-width: 768px)">
+                <source srcset="./images/team/team-3-mobile.jpg 1x, ./images/team/team-3-mobile@2x.jpg 2x"
+                  media="(min-width: 480px)">
+                <img class="team-card__foto" src="./images/team/team-3-mobile.jpg" alt="team-3">
+              </picture>
               <div class="team-card__wrapper">
                 <h3 class="team-card__name">John Doe</h3>
                 <p class="team-card__job-title">Marketing</p>
@@ -310,14 +313,15 @@
               </div>
             </li>
             <li class="team-card">
-              <img class="team-card__foto"
-                  alt="team-4"
-                  src="./images/team/team-4-desktop.jpg"
-                  srcset="
-                  ./images/team/team-4-desktop.jpg 1x,
-                  ./images/team/team-4-desktop@2x.jpg 2x"
-                  media="(min-width: 1200px)"                
-                /> 
+              <picture>
+                <source srcset="./images/team/team-4-desktop.jpg 1x, ./images/team/team-4-desktop@2x.jpg 2x"
+                  media="(min-width: 1200px)">
+                <source srcset="./images/team/team-4-tablet.jpg 1x, ./images/team/team-4-tablet@2x.jpg 2x"
+                  media="(min-width: 768px)">
+                <source srcset="./images/team/team-4-mobile.jpg 1x, ./images/team/team-4-mobile@2x.jpg 2x"
+                  media="(min-width: 480px)">
+                <img class="team-card__foto" src="./images/team/team-4-mobile.jpg" alt="team-4">
+              </picture>
               <div class="team-card__wrapper">
                 <h3 class="team-card__name">John Doe</h3>
                 <p class="team-card__job-title">UI Designer</p>
