--- a/portfolio.html
+++ b/portfolio.html
@@ -79,9 +79,9 @@
         </ul>
         </div>
       </div>
-      <!-- END SECOND
+      <!-- END SECOND -->
 
-      <!-- PORTFOLIO-->
+      <!-- PORTFOLIO -->
       <section class="portfolio">
         <div class="container">
           <ul class="portfolio__list list">
