--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
           </li>
         </ul>
 
-        <div class="menu__modal" data-modal-menu-open>
+        <div class="menu__modal" data-mobile-menu-open>
           <svg class="menu__svg" width="40" height="40">
             <use href="./images/icons.svg#icon-menu_40px"></use>
           </svg>
@@ -422,54 +422,54 @@
     </footer>
 
   <!--menu w oknie modalnym-->
-  <div class="backdrop is-hidden" data-modal-menu>
-    <div class="modal-menu">
-      <div class="modal-menu__close-btn-svg" data-modal-menu-close>
+  <div class="backdrop is-hidden" data-mobile-menu>
+    <div class="mobile-menu">
+      <div class="mobile-menu__close-btn-svg" data-mobile-menu-close>
         <svg class="svg-icon" width="40" height="40">
           <use href="./images/icons.svg#icon-close"></use>
         </svg>
       </div>
-      <nav class="modal-menu-navigation">
-        <ul class="modal-menu-navigation__list list">
-          <li class="modal-menu-navigation__item">
-            <a class="modal-menu-navigation__link link" href="./index.html"
+      <nav class="mobile-menu-navigation">
+        <ul class="mobile-menu-navigation__list list">
+          <li class="mobile-menu-navigation__item">
+            <a class="mobile-menu-navigation__link link" href="./index.html"
               >Agencja</a
             >
           </li>
-          <li class="modal-menu-navigation__item">
-            <a class="modal-menu-navigation__link modal-menu__index link" href="./portfolio.html"
+          <li class="mobile-menu-navigation__item">
+            <a class="mobile-menu-navigation__link mobile-menu__index link" href="./portfolio.html"
               >Portfolio</a
             >
           </li>
-          <li class="modal-menu-navigation__item">
-            <a class="modal-menu-navigation__link link" href="./index.html">Kontakt</a>
+          <li class="mobile-menu-navigation__item">
+            <a class="mobile-menu-navigation__link link" href="./index.html">Kontakt</a>
           </li>
         </ul>
       </nav>
       
-      <div class="modal-menu-header__contact">
-      <a class="modal-menu-header__tel link" href="tel:+48111111111">+48 111 111 111</a>
-      <a class="modal-menu-header__mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <div class="mobile-menu-header__contact">
+      <a class="mobile-menu-header__tel link" href="tel:+48111111111">+48 111 111 111</a>
+      <a class="mobile-menu-header__mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
       </div>
 
-      <ul class="modal-menu-social-list__list list">
-          <li class="modal-menu-social-list__item">
-            <a class="modal-menu-social-list__link link" href="#">Instagram</a>
+      <ul class="mobile-menu-social-list__list list">
+          <li class="mobile-menu-social-list__item">
+            <a class="mobile-menu-social-list__link link" href="#">Instagram</a>
           </li>
-          <li class="modal-menu-social-list__item">
-            <a class="modal-menu-social-list__link link" href="#">Twitter</a>
+          <li class="mobile-menu-social-list__item">
+            <a class="mobile-menu-social-list__link link" href="#">Twitter</a>
           </li>
-          <li class="modal-menu-social-list__item">
-            <a class="modal-menu-social-list__link link" href="#">Facebook</a>
+          <li class="mobile-menu-social-list__item">
+            <a class="mobile-menu-social-list__link link" href="#">Facebook</a>
           </li>
-          <li class="modal-menu-social-list__item">
-            <a class="modal-menu-social-list__link link" href="#">LinkedIn</a>
+          <li class="mobile-menu-social-list__item">
+            <a class="mobile-menu-social-list__link link" href="#">LinkedIn</a>
           </li>
         </ul>
     </div>
   </div>
 
-    <script src="./js/mobil-menu.js"></script>
+    <script src="./js/mobile-menu.js"></script>
 
   </body>
 </html>
