--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
   <body>
  
-      <include src="./partials/about.html"></include>
-      <include src="./partials/advantages.html"></include>
+      <!-- <include src="./partials/about.html"></include>
+      <include src="./partials/advantages.html"></include> -->
 
 <!-- ------  ABOUT  ------>
 <section class="about container">
