--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
+    crossorigin="anonymous"
+  />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.min.css" />
     <title>projekt_razem</title>
   </head>
@@ -28,7 +38,10 @@
       <include src="./partials/advantages.html"></include> -->
 
 <!-- ------  ABOUT  ------>
-<section class="about container">
+
+    <p class="advantages__title">tradition and love</p>
+
+<!-- <section class="container">
       <H3 class="about__title">tradition and love</H3>
       <h4 class="about__subtitle">how it's made</h4>
       <picture>
@@ -48,12 +61,39 @@
           Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, 
           a feugiat urna maximus. Cras massa nibh, tincidunt.  Aliquam erat volutpat. Aenean accumsan.</p>
       <button class="about__full" type="button">Read more ></button>
-  </section> 
+  </section>  -->
 
+<section class="about container">
+    <h3 class="about__title">tradition and love</h3>
+    <h4 class="about__subtitle">how it's <br /> made </h4>
+    <picture>
+        <source
+            srcset="./images/about/about-img.webp 1x, ./images/about/about-img@2x.webp 2x"
+            media="(min-width: 320px)" type=images/webp/>
+        <source
+            srcset="./images/about/about-img.png 1x, ./images/about/about-img@2x.png 2x"
+            media="(min-width: 320px)"/>
+        <img class="about__img"
+            src="./images/about/about-img.png" 
+            alt="krowa z dzbankiem mleka" >
+    </picture>
+    <p class="about__description">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla. </p>
+    <p class="about__comment">Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, <br/>tincidunt.
+        <br/> <br/> Aliquam erat volutpat. Aenean accumsan.</p>
 
+    <button class="about__btn" type="button"> 
+        <span> Read more </span>
+        <svg class="about__icon" width="4" height="8">
+             <use href="/images/about/icons.svg#icon-arrow-left"></use>
+          </svg>
+    </button>
+
+</section>
 
 <!-- ------  ADVANTAGES  ------>
 <section class="advantages container">
+  
+  
   <h3 hidden class="advantages__title">Advantages</h3>
   <ul class="grid list">
       <li class="grid__card"> 
